WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163474
Setting HTMLMediaElement.muted to the same value should not fire a volume change event
https://bugs.webkit.org/show_bug.cgi?id=163474
Summary
Setting HTMLMediaElement.muted to the same value should not fire a volume cha...
Chris Dumez
Reported
2016-10-14 17:05:42 PDT
Setting HTMLMediaElement.muted to the same value should not fire a volume change event: -
https://html.spec.whatwg.org/#dom-media-muted
Chrome and Firefox agree with the specification.
Attachments
Patch
(4.03 KB, patch)
2016-10-14 17:10 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-10-14 17:10:25 PDT
Created
attachment 291683
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-14 18:51:15 PDT
Comment on
attachment 291683
[details]
Patch Clearing flags on attachment: 291683 Committed
r207368
: <
http://trac.webkit.org/changeset/207368
>
WebKit Commit Bot
Comment 3
2016-10-14 18:51:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug