Setting HTMLMediaElement.muted to the same value should not fire a volume change event https://bugs.webkit.org/show_bug.cgi?id=163474

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Rebaseline W3C test now that more checks are passing.

* web-platform-tests/html/semantics/embedded-content/media-elements/event_volumechange-expected.txt:

Source/WebCore:

Setting HTMLMediaElement.muted to the same value should not fire a volume
change event:
- https://html.spec.whatwg.org/#dom-media-muted

Chrome and Firefox agree with the specification.

No new tests, rebaselined existing test.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setMuted):


Canonical link: https://commits.webkit.org/181286@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207368 268f45cc-cd09-0410-ab3c-d52691b4dbfc